Fix certificate validation syntax

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -185,9 +185,9 @@ Resources:
       DomainName: !Sub |
         ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
       DomainValidationOptions:
-        DomainName: !Sub |
-          ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
-        ValidationDomain: prx.tech
+        - ValidationDomain: prx.tech
+          DomainName: !Sub |
+            ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
   # AudiogramScalableTarget:
   #   Type: "AWS::ApplicationAutoScaling::ScalableTarget"
   #   Properties:
