--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -268,6 +268,7 @@ Resources:
                   - "sns:*"
                   - "codepipeline:*"
                   - "codebuild:*"
+                  - "acm:*"
                 Resource: "*" # TODO Really?
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
