Rework publish ALB domain and cert

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -175,7 +175,7 @@ Resources:
       RecordSets:
         - Type: A
           Name: !Sub |
-            ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
+            ${EnvironmentTypeAbbreviation}-publish-${VPC}.prx.tech.
           AliasTarget:
             DNSName: !GetAtt PublishALB.DNSName
             HostedZoneId: !GetAtt PublishALB.CanonicalHostedZoneID
@@ -183,11 +183,11 @@ Resources:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
       DomainName: !Sub |
-        ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
+        ${EnvironmentTypeAbbreviation}-publish-${VPC}.prx.tech
       DomainValidationOptions:
         - ValidationDomain: prx.tech
           DomainName: !Sub |
-            ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
+            ${EnvironmentTypeAbbreviation}-publish-${VPC}.prx.tech
   # AudiogramScalableTarget:
   #   Type: "AWS::ApplicationAutoScaling::ScalableTarget"
   #   Properties:
@@ -279,4 +279,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
+      ${EnvironmentTypeAbbreviation}-publish-${VPC}.prx.tech.
