Trying to fix whitespace in FQDN

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -174,20 +174,17 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
-          Name: !Sub |
-            ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
+          Name: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
           AliasTarget:
             DNSName: !GetAtt PublishALB.DNSName
             HostedZoneId: !GetAtt PublishALB.CanonicalHostedZoneID
   PublishCertificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
-      DomainName: !Sub |
-        ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
+      DomainName: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
       DomainValidationOptions:
         - ValidationDomain: prx.tech
-          DomainName: !Sub |
-            ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
+          DomainName: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
   # AudiogramScalableTarget:
   #   Type: "AWS::ApplicationAutoScaling::ScalableTarget"
   #   Properties:
