Fix ALB listener cert syntax

--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -104,7 +104,7 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       Certificates:
-        - !Ref PublishCertificate
+        - CertificateArn: !Ref PublishCertificate
       LoadBalancerArn: !Ref PublishALB
       Port: 443
       Protocol: HTTPS
