Add a wildcard cert for the primary VPC

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -355,6 +355,7 @@ Resources:
                 Version: 1
               Configuration:
                 NotificationArn: !Ref OpsStatusMessagesSNSTopic
+                CustomData: "TODO Get info about the deploy (last commit, etc)"
               RunOrder: 3
             - Name: ExecuteChangeSet
               ActionTypeId:
