Fix YAML syntax issue with wildcard domains

--- a/certificate.yml
+++ b/certificate.yml
@@ -9,10 +9,10 @@ Resources:
   VpcCertificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
-      DomainName: !Sub *.${VPC}.prx.tech
+      DomainName: !Sub "*.${VPC}.prx.tech"
       DomainValidationOptions:
         - ValidationDomain: prx.tech
-          DomainName: !Sub *.${VPC}.prx.tech
+          DomainName: !Sub "*.${VPC}.prx.tech"
 Outputs:
   CertificateArn:
     Description: The ARN for the wildcard certificate
