--- a/root.yml
+++ b/root.yml
@@ -142,6 +142,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
         RootStackName: !Ref AWS::StackName
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
@@ -161,6 +162,7 @@ Resources:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
+        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
         RootStackName: !Ref AWS::StackName
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
@@ -183,7 +185,7 @@ Resources:
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/publish.prx.org/publish.prx.org.yml"]]
       TimeoutInMinutes: "5"
 Outputs:
-  VpcCertificateArn:
+  VPCCertificateArn:
     Description: The ARN for the wildcard certificate for the VPC
     Value: !GetAtt CertificateStack.Outputs.CertificateArn
   AudiogramHostedZoneDNSName:
