--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -7,6 +7,8 @@ Parameters:
     Type: String
   VPCSubnet2:
     Type: String
+  VPCCertificateArn:
+    Type: String
   RootStackName:
     Type: String
   ECSCluster:
@@ -91,7 +93,7 @@ Resources:
         - !Ref VPCSubnet2
       SecurityGroups:
         - !Ref PublishSecurityGroup
-  PublishALBListener:
+  PublishALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       LoadBalancerArn: !Ref PublishALB
@@ -100,11 +102,11 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref PublishALBTargetGroup
-  PublishALBListener:
+  PublishALBHTTPSListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       Certificates:
-        - CertificateArn: !Ref PublishCertificate
+        - CertificateArn: !Ref VPCCertificateArn
       LoadBalancerArn: !Ref PublishALB
       Port: 443
       Protocol: HTTPS
@@ -174,17 +176,10 @@ Resources:
       HostedZoneName: prx.tech.
       RecordSets:
         - Type: A
-          Name: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
+          Name: !Sub ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
           AliasTarget:
             DNSName: !GetAtt PublishALB.DNSName
             HostedZoneId: !GetAtt PublishALB.CanonicalHostedZoneID
-  PublishCertificate:
-    Type: "AWS::CertificateManager::Certificate"
-    Properties:
-      DomainName: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
-      DomainValidationOptions:
-        - ValidationDomain: prx.tech
-          DomainName: !Sub ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech
   # AudiogramScalableTarget:
   #   Type: "AWS::ApplicationAutoScaling::ScalableTarget"
   #   Properties:
@@ -276,4 +271,4 @@ Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
-      ${EnvironmentTypeAbbreviation}.publish.${VPC}.prx.tech.
+      ${EnvironmentTypeAbbreviation}-publish.${VPC}.prx.tech.
