Fix ALB dependencies

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -115,7 +115,9 @@ Resources:
               ContainerPort: 8888
   AudiogramService:
     Type: "AWS::ECS::Service"
-    DependsOn: AudiogramALBListener
+    DependsOn:
+      - AudiogramALBHTTPListener
+      - AudiogramALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
       DeploymentConfiguration:
