--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -155,7 +155,9 @@ Resources:
               ContainerPort: 4200
   PublishService:
     Type: "AWS::ECS::Service"
-    DependsOn: PublishALBListener
+    DependsOn:
+      - PublishALBHTTPListener
+      - PublishALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
       DeploymentConfiguration:
