Avoiding renaming the HTTP ALB listeners

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -73,7 +73,7 @@ Resources:
         - !Ref VPCSubnet2
       SecurityGroups:
         - !Ref AudiogramSecurityGroup
-  AudiogramALBHTTPListener:
+  AudiogramALBListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       LoadBalancerArn: !Ref AudiogramALB
@@ -116,7 +116,7 @@ Resources:
   AudiogramService:
     Type: "AWS::ECS::Service"
     DependsOn:
-      - AudiogramALBHTTPListener
+      - AudiogramALBListener
       - AudiogramALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
