--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -93,11 +93,11 @@ Resources:
         - !Ref VPCSubnet2
       SecurityGroups:
         - !Ref PublishSecurityGroup
-  PublishALBHTTPListener:
+  PublishALBListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       LoadBalancerArn: !Ref PublishALB
-      Port: 80
+      Port: 800
       Protocol: HTTP
       DefaultActions:
         - Type: forward
@@ -108,7 +108,7 @@ Resources:
       Certificates:
         - CertificateArn: !Ref VPCCertificateArn
       LoadBalancerArn: !Ref PublishALB
-      Port: 443
+      Port: 4430
       Protocol: HTTPS
       DefaultActions:
         - Type: forward
@@ -156,7 +156,7 @@ Resources:
   PublishService:
     Type: "AWS::ECS::Service"
     DependsOn:
-      - PublishALBHTTPListener
+      - PublishALBListener
       - PublishALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
