Recover lost ALB listener?

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -73,7 +73,7 @@ Resources:
         - !Ref VPCSubnet2
       SecurityGroups:
         - !Ref AudiogramSecurityGroup
-  AudiogramALBListener:
+  AudiogramALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       LoadBalancerArn: !Ref AudiogramALB
