Fix ALB dependency

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -116,7 +116,7 @@ Resources:
   AudiogramService:
     Type: "AWS::ECS::Service"
     DependsOn:
-      - AudiogramALBListener
+      - AudiogramALBHTTPListener
       - AudiogramALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
