Add notification ARN to root nested stacks

--- a/root.yml
+++ b/root.yml
@@ -95,11 +95,13 @@ Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
       TimeoutInMinutes: "5"
   CertificateStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
@@ -108,6 +110,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: VPCStack
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         KeyPairName: !Ref ASGKeyPairName
         EnvironmentType: !Ref RootEnvironmentType
@@ -124,6 +127,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
@@ -138,6 +142,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
@@ -158,6 +163,7 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
+      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
