--- a/root.yml
+++ b/root.yml
@@ -95,13 +95,15 @@ Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
       TimeoutInMinutes: "5"
   CertificateStack:
     Type: "AWS::CloudFormation::Stack"
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
@@ -110,7 +112,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: VPCStack
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         KeyPairName: !Ref ASGKeyPairName
         EnvironmentType: !Ref RootEnvironmentType
@@ -127,7 +130,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         GitHubOAuthToken: !Ref GitHubOAuthToken
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
@@ -142,7 +146,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
@@ -163,7 +168,8 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
-      NotificationARNs: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
         VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
