--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -23,6 +23,14 @@ Resources:
     # app, infrastructure, or user data.
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
+    Properties:
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 14
+            Status: Enabled
+      Tags:
+        - Key: Project
+          Value: Infrastructure
   CodePipelineIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -197,4 +205,7 @@ Resources:
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
+      Tags:
+        - Key: Project
+          Value: Infrastructure
       TimeoutInMinutes: 15
