Give CloudFormation role S3 lifecycle policy

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -267,6 +267,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:CreateBucket
+                  - s3:PutLifecycleConfiguration
                 Resource: "*" # TODO Really?
               - Effect: Allow
                 # TODO Dangerous!
