Use number types

--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -46,7 +46,7 @@ Parameters:
   CmsEnvCmsHost:
     Type: String
   CmsEnvDatabasePoolSize:
-    Type: String
+    Type: Number
   CmsEnvDbEnvMysqlDatabase:
     Type: String
   CmsEnvDbEnvMysqlPassword:
@@ -56,7 +56,7 @@ Parameters:
   CmsEnvDbPort3306TcpAddr:
     Type: String
   CmsEnvDbPort3306TcpPort:
-    Type: String
+    Type: Number
   CmsEnvFeederHost:
     Type: String
   CmsEnvIdHost:
