Top level cms parameters

--- a/root.yml
+++ b/root.yml
@@ -54,6 +54,60 @@ Parameters:
     Type: String
   AudiogramECRImageTag:
     Type: String
+  CmsECRRegion:
+    Type: String
+  CmsECRRepositoryName:
+    Type: String
+  CmsECRImageTag:
+    Type: String
+  CmsEnvAwsAccessKeyId:
+    Type: String
+  CmsEnvAwsAccountId:
+    Type: String
+  CmsEnvAwsBucket:
+    Type: String
+  CmsEnvAwsRegion:
+    Type: String
+  CmsEnvAwsSecretAccessKey:
+    Type: String
+  CmsEnvCmsHost:
+    Type: String
+  CmsEnvDatabasePoolSize:
+    Type: Number
+  CmsEnvDbEnvMysqlDatabase:
+    Type: String
+  CmsEnvDbEnvMysqlPassword:
+    Type: String
+  CmsEnvDbEnvMysqlUser:
+    Type: String
+  CmsEnvDbPort3306TcpAddr:
+    Type: String
+  CmsEnvDbPort3306TcpPort:
+    Type: Number
+  CmsEnvFeederHost:
+    Type: String
+  CmsEnvIdHost:
+    Type: String
+  CmsEnvMemcacheServers:
+    Type: String
+  CmsEnvMetaHost:
+    Type: String
+  CmsEnvMysqlAllowEmptyPassword:
+    Type: String
+  CmsEnvNewRelicKey:
+    Type: String
+  CmsEnvNewRelicName:
+    Type: String
+  CmsEnvPrxHost:
+    Type: String
+  CmsEnvPrxSecret:
+    Type: String
+  CmsEnvPublicAssetSecret:
+    Type: String
+  CmsEnvRailsEnv:
+    Type: String
+  CmsEnvRailsSecretKey:
+    Type: String
   PublishECRRegion:
     Type: String
   PublishECRRepositoryName:
