--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -147,7 +147,7 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref CmsALBTargetGroup
-  CmsTaskDefinition:
+  CmsWebTaskDefinition:
     Type: "AWS::ECS::TaskDefinition"
     Properties:
       ContainerDefinitions:
@@ -229,7 +229,7 @@ Resources:
           ContainerPort: 3000
           TargetGroupArn: !Ref CmsALBTargetGroup
       Role: !Ref ECSServiceIAMRole
-      TaskDefinition: !Ref PublishTaskDefinition
+      TaskDefinition: !Ref CmsWebTaskDefinition
   CmsWebRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     DependsOn: CmsALB
