Pass ECR info to sub stack

--- a/root.yml
+++ b/root.yml
@@ -235,6 +235,9 @@ Resources:
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        CmsECRRegion: !Ref CmsECRRegion
+        CmsECRRepositoryName: !Ref CmsECRRepositoryName
+        CmsECRImageTag: !Ref CmsECRImageTag
         CmsEnvAwsAccessKeyId: !Ref CmsEnvAwsAccessKeyId
         CmsEnvAwsAccountId: !Ref CmsEnvAwsAccountId
         CmsEnvAwsBucket: !Ref CmsEnvAwsBucket
