--- a/root.yml
+++ b/root.yml
@@ -218,6 +218,22 @@ Resources:
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
       TimeoutInMinutes: "5"
+  CmsPipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        CmsECRRegion: !Ref CmsECRRegion
+        CmsECRRepositoryName: !Ref CmsECRRepositoryName
+        CmsECRImageTag: !Ref CmsECRImageTag
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms.prx.org/pipeline.yml"]]
+      TimeoutInMinutes: "5"
   CmsStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
