Add Project tags to ALB's

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -68,11 +68,14 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
       Scheme: internet-facing
+      SecurityGroups:
+        - !Ref AudiogramSecurityGroup
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
-      SecurityGroups:
-        - !Ref AudiogramSecurityGroup
+      Tags:
+        - Name: Project
+          Value: audiogram
   AudiogramALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
