--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -122,11 +122,14 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
       Scheme: internet-facing
+    SecurityGroups:
+      - !Ref CmsSecurityGroup
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
-      SecurityGroups:
-        - !Ref CmsSecurityGroup
+      Tags:
+        - Name: Project
+          Value: cms.prx.org
   CmsALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
