--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -92,11 +92,14 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
       Scheme: internet-facing
+    SecurityGroups:
+      - !Ref PublishSecurityGroup
       Subnets:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
-      SecurityGroups:
-        - !Ref PublishSecurityGroup
+      Tags:
+        - Name: Project
+          Value: publish.prx.org
   PublishALBListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
