Fix tag property name

--- a/cms.prx.org/cms.prx.org.yml
+++ b/cms.prx.org/cms.prx.org.yml
@@ -128,7 +128,7 @@ Resources:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
       Tags:
-        - Name: Project
+        - Key: Project
           Value: cms.prx.org
   CmsALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
