--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -74,7 +74,7 @@ Resources:
         - !Ref VPCSubnet1
         - !Ref VPCSubnet2
       Tags:
-        - Name: Project
+        - Key: Project
           Value: audiogram
   AudiogramALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
