--- a/root.yml
+++ b/root.yml
@@ -322,3 +322,6 @@ Outputs:
   PublishHostedZoneDNSName:
     Description: Domain name for publish app
     Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
+  CmsHostedZoneDNSName:
+    Description: Domain name for CMS app
+    Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
