--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -100,6 +100,8 @@ Resources:
       Tags:
         - Key: Project
           Value: publish.prx.org
+        - Name: Foo
+          Value: Bar
   PublishALBListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
