Start working on app alarms

--- a/audiogram/audiogram.yml
+++ b/audiogram/audiogram.yml
@@ -230,6 +230,10 @@ Resources:
   #     Statistic: Average
   #     Threshold: "10"
   #     Unit: Percent
+  # AudiogramHTTP500Alarm:
+    # Type: "AWS::CloudWatch::Alarm"
+    # Properties:
+      # Statistic: Sum
 Outputs:
   DNSName:
     Description: The DNS name for the applications load balancer
