Add some extra env abbreviations

--- a/root.yml
+++ b/root.yml
@@ -12,6 +12,10 @@ Description: >
   in separate templates.
 Mappings:
   EnvironmentTypeAbbreviationMap:
+    Testing:
+      abbreviation: test
+    Beta:
+      abbreviation: beta
     Staging:
       abbreviation: stag
     Production:
