Disable CMS root output

--- a/root.yml
+++ b/root.yml
@@ -326,6 +326,6 @@ Outputs:
   PublishHostedZoneDNSName:
     Description: Domain name for publish app
     Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
-  CmsHostedZoneDNSName:
-    Description: Domain name for CMS app
-    Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
+  # CmsHostedZoneDNSName:
+  #   Description: Domain name for CMS app
+  #   Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
