Improve CloudFormation notification handling in Slack relay

--- a/root.yml
+++ b/root.yml
@@ -45,6 +45,8 @@ Parameters:
     Type: String
   CloudWatchSlackWebhookURL:
     Type: String
+  CloudFormationSlackWebhookURL:
+    Type: String
   CodePipelineSlackWebhookURL:
     Type: String
   GitHubOAuthToken:
@@ -146,6 +148,7 @@ Resources:
         OpsStatusMessagesSNSTopicArn: !Ref OpsStatusMessagesSNSTopicArn
         AutoScalingSlackWebhookURL: !Ref AutoScalingSlackWebhookURL
         CloudWatchSlackWebhookURL: !Ref CloudWatchSlackWebhookURL
+        CloudFormationSlackWebhookURL: !Ref CloudFormationSlackWebhookURL
         CodePipelineSlackWebhookURL: !Ref CodePipelineSlackWebhookURL
         TemplateBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/notifications.yml"]]
