--- a/notifications.yml
+++ b/notifications.yml
@@ -9,6 +9,8 @@ Parameters:
     Type: String
   CloudWatchSlackWebhookURL:
     Type: String
+  CloudFormationSlackWebhookURL:
+    Type: String
   CodePipelineSlackWebhookURL:
     Type: String
   TemplateBucket:
@@ -88,6 +90,7 @@ Resources:
           ASG_SLACK_WEBHOOK_URL: !Ref AutoScalingSlackWebhookURL
           CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
           PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
+          CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
