--- a/root.yml
+++ b/root.yml
@@ -329,13 +329,15 @@ Resources:
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
       TimeoutInMinutes: "5"
-  CmsAudioLambdaStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
-      TimeoutInMinutes: "5"
+  # CmsAudioLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaFunctionCodeS3Key
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
+  #     TimeoutInMinutes: "5"
 Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
