--- a/cms-audio-lambda/cms-audio-lambda.yml
+++ b/cms-audio-lambda/cms-audio-lambda.yml
@@ -1,6 +1,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Audiogram application running in Docker
 Parameters:
+  LambdaFunctionCodeS3Key:
+    Type: String
 Resources:
   LambdaBasicExecutionIAMRole:
     Type: "AWS::IAM::Role"
@@ -22,14 +24,8 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref TemplateBucket
-        S3Key: "lambdas/sns-ops-to-slack.zip" # TODO get from template config
+        S3Key: !Ref LambdaFunctionCodeS3Key
       Description: Audio processing for cms.prx.org
-      Environment:
-        Variables:
-          ASG_SLACK_WEBHOOK_URL: !Ref AutoScalingSlackWebhookURL
-          CW_SLACK_WEBHOOK_URL: !Ref CloudWatchSlackWebhookURL
-          PIPELINE_SLACK_WEBHOOK_URL: !Ref CodePipelineSlackWebhookURL
-          CFN_SLACK_WEBHOOK_URL: !Ref CloudFormationSlackWebhookURL
       Handler: index.handler
       MemorySize: 256
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
