--- a/root.yml
+++ b/root.yml
@@ -338,7 +338,7 @@ Resources:
   #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaFunctionCodeS3Key
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
   #     TimeoutInMinutes: "5"
-Outputs:
+# Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
   #   Value: !GetAtt CertificateStack.Outputs.CertificateArn
