--- a/root.yml
+++ b/root.yml
@@ -160,15 +160,15 @@ Resources:
   #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
   #     TimeoutInMinutes: "5"
-  CertificateStack:
-    Type: "AWS::CloudFormation::Stack"
-    Properties:
-      NotificationARNs:
-        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
-      TimeoutInMinutes: "5"
+  # CertificateStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/certificate.yml"]]
+  #     TimeoutInMinutes: "5"
   # ECSClusterStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   DependsOn: VPCStack
