--- a/root.yml
+++ b/root.yml
@@ -325,6 +325,8 @@ Resources:
       NotificationARNs:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        GitHubOAuthToken: !Ref GitHubOAuthToken
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
