Add additional SQS actions for cms audio policy

--- a/cms-audio-lambda/pipeline.yml
+++ b/cms-audio-lambda/pipeline.yml
@@ -64,6 +64,8 @@ Resources:
               - Effect: Allow
                 Action:
                   - "sqs:sendMessage"
+                  - "sqs:receiveMessage"
+                  - "sqs:deleteMessageBatch"
                 Resource:
                   - "arn:aws:sqs:us-east-1:561178107736:test_cms_audio_callback"
         - PolicyName: S3TestBucketPolicy
