Fix CodeBuild policy for CMS audio lambda

--- a/cms-audio-lambda/pipeline.yml
+++ b/cms-audio-lambda/pipeline.yml
@@ -57,26 +57,6 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${ArtifactStore}
                   - !Sub arn:aws:s3:::${ArtifactStore}/*
-        - PolicyName: SqsTestQueuePolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "sqs:sendMessage"
-                  - "sqs:receiveMessage"
-                  - "sqs:deleteMessageBatch"
-                Resource:
-                  - "arn:aws:sqs:us-east-1:561178107736:test_cms_audio_callback"
-        - PolicyName: S3TestBucketPolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "s3:*"
-                Resource:
-                  - "arn:aws:s3:::test.mediajoint.prx.org"
         - PolicyName: CodePipelineRolePolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -141,6 +121,24 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource: !Sub arn:aws:s3:::${RootStackTemplateConfigBucket}/*
+        - PolicyName: SqsTestQueuePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "sqs:*"
+                Resource:
+                  - "arn:aws:sqs:us-east-1:561178107736:test_cms_audio_callback"
+        - PolicyName: S3TestBucketPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:*"
+                Resource:
+                  - "arn:aws:s3:::test.mediajoint.prx.org"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
     Properties:
