Correct S3 cms lambda test policies

--- a/cms-audio-lambda/pipeline.yml
+++ b/cms-audio-lambda/pipeline.yml
@@ -138,7 +138,20 @@ Resources:
                 Action:
                   - "s3:*"
                 Resource:
+                  - "arn:aws:s3:::test.mediajoint.prx.org/*"
+              - Effect: Allow
+                Action:
+                  - "s3:ListBucket"
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                Resource:
                   - "arn:aws:s3:::test.mediajoint.prx.org"
+                  - "arn:aws:s3:::test.mediajoint.prx.org/*"
+              - Effect: Allow
+                Action:
+                  - "s3:ListAllMyBuckets"
+                Resource:
+                  - "*"
   Pipeline:
     Type: "AWS::CodePipeline::Pipeline"
     Properties:
