Create some code buckets

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -107,6 +107,20 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
+  StagingCodeBucket:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+  ProductionCodeBucket:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      Tags:
+        - Key: Project
+          Value: Infrastructure
   CodePipelineIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -499,3 +513,17 @@ Outputs:
     Value: !Ref ProductionTemplateBucket
     Export:
       Name: !Sub ${AWS::StackName}-Production-TemplateBucket
+  StagingCodeBucket:
+    Description: >
+      The name of the bucket that code has been synced to, to be used
+      in a staging environment
+    Value: !Ref StagingCodeBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-Staging-CodeBucket
+  ProductionCodeBucket:
+    Description: >
+      The name of the bucket that code has been synced to, to be used
+      in a production environment
+    Value: !Ref ProductionCodeBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-Production-CodeBucket
