Pass code bucket to CMS audio code build

--- a/root.yml
+++ b/root.yml
@@ -329,6 +329,7 @@ Resources:
         GitHubOAuthToken: !Ref GitHubOAuthToken
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
       TimeoutInMinutes: "5"
   # CmsAudioLambdaStack:
