Update root template for CMS lambda S3 key

--- a/cms-audio-lambda/cms-audio-lambda.yml
+++ b/cms-audio-lambda/cms-audio-lambda.yml
@@ -1,6 +1,8 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Audiogram application running in Docker
 Parameters:
+  CodeBucket:
+    Type: String
   LambdaFunctionCodeS3Key:
     Type: String
 Resources:
@@ -23,7 +25,7 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref TemplateBucket
+        S3Bucket: !Ref CodeBucket
         S3Key: !Ref LambdaFunctionCodeS3Key
       Description: Audio processing for cms.prx.org
       Handler: index.handler
