--- a/root.yml
+++ b/root.yml
@@ -140,6 +140,8 @@ Parameters:
     Type: String
   PublishEnvUseCloudfront:
     Type: String
+  CmsAudioLambdaZipName:
+    Type: String
 Resources:
   NotificationsStack:
     Type: "AWS::CloudFormation::Stack"
@@ -332,15 +334,16 @@ Resources:
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/pipeline.yml"]]
       TimeoutInMinutes: "5"
-  # CmsAudioLambdaStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     Parameters:
-  #       LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaFunctionCodeS3Key
-  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
-  #     TimeoutInMinutes: "5"
+  CmsAudioLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
+        LambdaFunctionCodeS3Key: !Ref CmsAudioLambdaZipName
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/cms-audio-lambda/cms-audio-lambda.yml"]]
+      TimeoutInMinutes: "5"
 # Outputs:
   # VPCCertificateArn:
   #   Description: The ARN for the wildcard certificate for the VPC
