Give CFN role get access to code buckets

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -270,6 +270,16 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${StagingTemplateBucket}/*
                   - !Sub arn:aws:s3:::${ProductionTemplateBucket}/*
+        - PolicyName: CodeBucketAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                Resource:
+                  - !Sub arn:aws:s3:::${StagingCodeBucket}/*
+                  - !Sub arn:aws:s3:::${ProductionCodeBucket}/*
         - PolicyName: CloudFormationRolePolicy
           PolicyDocument:
             Version: "2012-10-17"
