Add retention policy to code buckets

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -111,6 +111,7 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
+      RetentionInDays: 60
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -118,6 +119,7 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
+      RetentionInDays: 60
       Tags:
         - Key: Project
           Value: Infrastructure
