Fix expiration policy on code buckets

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -111,7 +111,10 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
-      RetentionInDays: 60
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 60
+            Status: Enabled
       Tags:
         - Key: Project
           Value: Infrastructure
@@ -119,7 +122,10 @@ Resources:
     Type: "AWS::S3::Bucket"
     DeletionPolicy: Retain
     Properties:
-      RetentionInDays: 60
+      LifecycleConfiguration:
+        Rules:
+          - ExpirationInDays: 60
+            Status: Enabled
       Tags:
         - Key: Project
           Value: Infrastructure
