Conditionally launch nested pipeline stacks

--- a/root.yml
+++ b/root.yml
@@ -20,6 +20,8 @@ Mappings:
       abbreviation: stag
     Production:
       abbreviation: prod
+Conditions:
+  CreatePipelineStacks: !Equals [!Ref RootEnvironmentType, Staging]
 Parameters:
   ASGKeyPairName:
     Description: >
@@ -191,6 +193,7 @@ Resources:
   #     TimeoutInMinutes: "5"
   # AudiogramPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: CreatePipelineStacks
   #   DependsOn: ECSClusterStack
   #   Properties:
   #     NotificationARNs:
@@ -229,6 +232,7 @@ Resources:
   #     TimeoutInMinutes: "5"
   # CmsPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
+  #   Condition: CreatePipelineStacks
   #   DependsOn: ECSClusterStack
   #   Properties:
   #     NotificationARNs:
@@ -323,6 +327,7 @@ Resources:
   #     TimeoutInMinutes: "5"
   CmsAudioLambdaPipelineStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: CreatePipelineStacks
     Properties:
       NotificationARNs:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
