Clean up some IAM policy syntax

--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -46,6 +46,7 @@ Resources:
       Path: "/"
       Policies:
         - PolicyName: ArtifactStoreFullAccess
+          # This is the ArtifactStore resource defined in this template
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -61,12 +62,18 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "cloudwatch:*" # TODO Really?
-                  - "codebuild:BatchGetBuilds"
-                  - "codebuild:StartBuild"
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                   - "s3:GetBucketVersioning"
+                Resource: "*" # TODO Really?
+              - Effect: Allow
+                Action:
+                  - "codebuild:BatchGetBuilds"
+                  - "codebuild:StartBuild"
+                Resource: "*" # TODO Really?
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:*" # TODO Really?
                 Resource: "*" # TODO Really?
   CodeBuildIAMRole:
     Type: "AWS::IAM::Role"
