--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -187,12 +187,21 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "cloudwatch:*" # TODO Really?
-                  - "codebuild:BatchGetBuilds"
-                  - "codebuild:StartBuild"
+                  # TODO Not sure what these are being used for
+                  # Probably for source action buckets and artifact buckets
+                  # Maybe also template buckets
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                   - "s3:GetBucketVersioning"
+                Resource: "*"  # TODO Really?
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:*" # TODO Really?
+                Resource: "*" # TODO Really?
+              - Effect: Allow
+                Action:
+                  - "codebuild:BatchGetBuilds"
+                  - "codebuild:StartBuild"
                 Resource: "*" # TODO Really?
   CodeBuildIAMRole:
     Type: "AWS::IAM::Role"
