Improve CodePipeline build project naming

--- a/cms.prx.org/pipeline.yml
+++ b/cms.prx.org/pipeline.yml
@@ -6,6 +6,8 @@ Parameters:
     Type: String
   GitHubOAuthToken:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   RootStackTemplateConfigBucket:
     Type: String
   RootStackTemplateConfigArchive:
@@ -200,7 +202,7 @@ Resources:
             Value: !Ref CmsECRImageTag
         Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
-      Name: !Sub cms-build-${AWS::Region} # TODO better name
+      Name: !Sub cms-${AWS::Region}-${EnvironmentTypeAbbreviation}
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
