--- a/root.yml
+++ b/root.yml
@@ -202,6 +202,7 @@ Resources:
   #       GitHubOAuthToken: !Ref GitHubOAuthToken
   #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
   #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
   #       AudiogramECRRegion: !Ref AudiogramECRRegion
   #       AudiogramECRRepositoryName: !Ref AudiogramECRRepositoryName
   #       AudiogramECRImageTag: !Ref AudiogramECRImageTag
@@ -239,6 +240,7 @@ Resources:
   #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
   #     Parameters:
   #       GitHubOAuthToken: !Ref GitHubOAuthToken
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
   #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
   #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
   #       CmsECRRegion: !Ref CmsECRRegion
@@ -334,6 +336,7 @@ Resources:
       Parameters:
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
         GitHubOAuthToken: !Ref GitHubOAuthToken
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
         CodeBucket: !Join ["", ["Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-CodeBucket"]]
