--- a/audiogram/pipeline.yml
+++ b/audiogram/pipeline.yml
@@ -6,6 +6,8 @@ Parameters:
     Type: String
   GitHubOAuthToken:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   RootStackTemplateConfigBucket:
     Type: String
   RootStackTemplateConfigArchive:
@@ -208,7 +210,7 @@ Resources:
             Value: !Ref AudiogramECRImageTag
         Image: aws/codebuild/docker:1.12.1
         Type: LINUX_CONTAINER
-      Name: !Sub audiogram-build-${AWS::Region} # TODO better name
+      Name: !Sub audiogram-${AWS::Region}-${EnvironmentTypeAbbreviation}
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
