--- a/cms-audio-lambda/pipeline.yml
+++ b/cms-audio-lambda/pipeline.yml
@@ -14,6 +14,8 @@ Parameters:
     Type: String
   GitHubOAuthToken:
     Type: String
+  EnvironmentTypeAbbreviation:
+    Type: String
   RootStackTemplateConfigBucket:
     Type: String
   RootStackTemplateConfigArchive:
@@ -223,7 +225,7 @@ Resources:
             Value: !Ref CodeBucket
         Image: aws/codebuild/nodejs:4.3.2
         Type: LINUX_CONTAINER
-      Name: !Sub cms-audio-lambda-build-${AWS::Region} # TODO better name
+      Name: !Sub cms-audio-lambda-${AWS::Region}-${EnvironmentTypeAbbreviation}
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
         Type: CODEPIPELINE
